添加网站备案信息并优化Git忽略规则

--- a/index.html
+++ b/index.html
@@ -2829,6 +2829,7 @@
     <!-- 页脚 -->
     <div class="footer">
         <p class="footer-text">© MrZh2025 以上信息仅代表个人观点</p>
+        <p class="footer-text" style="margin-top: 8px;">网站备案/许可证号：浙ICP备12009431号-7</p>
     </div>
 
     <script>
