--- a/dashboard.html
+++ b/dashboard.html
@@ -599,15 +599,15 @@
                             <div style="font-size: 14px; color: #4ade80; margin-bottom: 8px; font-weight: 600;">泸县园区</div>
                             <div style="font-size: 12px; color: #a0aec0; line-height: 1.6;">
                                 规划面积<br>
-                                <span style="color: #4ade80; font-size: 20px; font-weight: bold;">8500</span> <span style="font-size: 13px;">亩</span>
+                                <span style="color: #4ade80; font-size: 20px; font-weight: bold;">2000</span> <span style="font-size: 13px;">亩</span>
                             </div>
                         </div>
                         <!-- 江阳园区 -->
                         <div style="padding: 12px; background: rgba(33, 150, 243, 0.15); border-radius: 10px; border: 2px solid rgba(33, 150, 243, 0.3);">
                             <div style="font-size: 14px; color: #2196f3; margin-bottom: 8px; font-weight: 600;">江阳园区</div>
                             <div style="font-size: 12px; color: #a0aec0; line-height: 1.6;">
-                                配套服务<br>
-                                <span style="color: #2196f3; font-size: 20px; font-weight: bold;">临床</span> <span style="font-size: 13px;">应用</span>
+                                规划面积<br>
+                                <span style="color: #2196f3; font-size: 20px; font-weight: bold;">6470</span> <span style="font-size: 13px;">亩</span>
                             </div>
                         </div>
                     </div>
@@ -825,7 +825,7 @@
         // 城市数据 - 扩展全国布局
         // 四川省"一链四极"核医疗产业园布局（真实数据）
         const cities = [
-            { province: '四川', city: '泸州', type: '核医疗产业园', description: '西南核医疗产业园 - 临床转化应用极', detail: '2024年9月揭牌，规划8500亩，新型核素诊疗量全国第一', level: 1 },
+            { province: '四川', city: '泸州', type: '核医疗产业园', description: '西南核医疗产业园 - 临床转化应用极', detail: '2024年9月揭牌，规划2000亩，新型核素诊疗量全国第一', level: 1 },
             { province: '四川', city: '绵阳市游仙区', type: '核医疗健康产业园', description: '核医疗健康产业园 - 装备制造极', detail: '主体结构已封顶，全国建设速度最快', level: 1 },
             { province: '四川', city: '成都医学城', type: '放射性药物产业园', description: '放射性药物产业园 - 科技创新极', detail: '核医疗装备研发、核药研发', level: 1 },
             { province: '四川', city: '成都天府国际生物城', type: '核医疗产业园', description: '核医疗产业园 - 科技创新极', detail: '生物医药与核医疗融合发展', level: 1 },
@@ -862,7 +862,7 @@
 
             // 泸州 - 临床转化应用极
             '► 泸州: 西南核医疗产业园',
-            '► 泸州产业园规模: 8500亩',
+            '► 泸州产业园规模: 2000亩',
             '► 泸州揭牌时间: 2024年9月',
             '► 新型核素诊疗量: 全国第一',
             '► 年核诊疗量: 1.6万人次',
